# reactos-deprecated-gitsvn-dont-use

./: .gitignore  README.md
documentation/: README
documentation/articles/: D3DParseUnknownCommand.dia  rpcrt4_callchains.txt  user_interface_guidelines.html
documentation/rosdocs/: readme.dbk
documentation/user.interface/: user_interface_guidelines.html
press-media/art/: COPYING  logo_vector.svgz  readme.txt  userbar.psd
press-media/flyers/: ReactOS.doc  ReactOS.sxw  ReactOS_FOSDEM2007.doc
reactos/: .gdbinit  config.template.rbuild  freesym  lumake  luser.gdb  map2sym.awk  modules.gdb  unistr.gdb
reactos/cmake/: config-amd64.cmake  config-arm.cmake  config.cmake
reactos/drivers/base/kdgdb/: CMakeLists.txt  gdb_input.c  gdb_receive.c  gdb_send.c  i386_sup.c  kdgdb.c  kdgdb.h  kdgdb.rc  kdpacket.c  utils.c
reactos/lib/: lib.rbuild
reactos/ntoskrnl/: CMakeLists.txt  ntoskrnl-generic.rbuild
reactos/tools/: tools.mak
rosdocs/: ChangeLog  Makefile  readme.txt
rosdocs/tutorials/: ChangeLog  tutorials.xml
tools/: ReactOS.vmx  boot.bat  createrbuild.cmd  csvnpass.c  wineimport.cmd  wineimport.sh
tools/Message Translator/: Local.testsettings  Msg Translator.sln  Msg Translator.vsmdi  TraceAndTestImpact.testsettings
tools/MozillaControl/: README.txt  control-ros.nsi  files.nsh  local.nsh
tools/Qemu GUI/: AboutForm.Designer.cs  AboutForm.cs  AboutForm.resx  AssemblyInfo.cs  Data.cs  DebugForm.Designer.cs  DebugForm.cs  DebugForm.resx  ErrorForm.cs  ErrorForm.designer.cs  Form1.cs  Form1.resx  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Pipes.cs  (+14 more)
(+2005 files in other folders)
